mobile gap fix

--- a/src/styles/_standard-01-token.scss
+++ b/src/styles/_standard-01-token.scss
@@ -108,7 +108,7 @@
     --mobile-optical-ratio: var(--ratio-silver);
     --mobile-line-height: 1.5;
     --mobile-gap-body: var(--leading);
-    --mobile-gap: var(--leading); /* Space between standard block like paragraph */
+    --mobile-gap: var(--baseline); /* Space between standard block like paragraph */
     --mobile-gap-block: var(--baseline);
 
 
